# multicore-hw2

./: LICENSE  README.md  RUNME.sh
.ipynb_checkpoints/: results-checkpoint.csv
sources/: CMakeLists.txt
sources/src/: core.cu  core.h
sources/src/.ipynb_checkpoints/: core-checkpoint.cu  core-checkpoint.h
